# proposicoes_bd

./: LICENSE  README.md  pyproject.toml  setup.py
proposicoes_bd/: __init__.py  datas.py  msaccess.py  strings.py
