[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proposicoes_db"
version = "1.0.0"
description = "Biblioteca para integração com banco de dados MS Access"
authors = [
    { name = "Gilberto Almeida", email = "gfdarj@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "pyodbc>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/gfdarj/proposicoes_db"
